src/main/java/com/example/timski/model/errors/InvalidArgumentsException.java
package com.example.timski.model.errors;

public class InvalidArgumentsException extends RuntimeException{

    public InvalidArgumentsException(){
        super("Invalid arguments exception");
    }
}
